changed text on search bar

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="row" style="margin-left: 5px;">
       <form class="col-4 col-sm-3 col-md-2" style="padding: 0px;" id="citySearchBar">
         <div class="form-group">
-          <label for="citySearchBar">Search for a City:</label>
-          <input type ="text" class="form-control" id="cityInfo" placeholder="City, State">
+          <label for="citySearchBar">Search for a City: (Example Format: Seattle, Washington)</label>
+          <input type ="text" class="form-control" id="cityInfo" placeholder="Enter city and state">
         </div>
         <!-- <button type="button" class="btn btn-primary btn-block" style="text-align: left;">Wichita, KS</button>
           <button type="button" class="btn btn-primary btn-block" style="text-align: left;">Wichita, KS</button>
